@@ -189,6 +189,7 @@ Jython in ways large and small, in no particular order:
     Han Siang Phua
     Elisha Hollander
     Thierry Guérin
+    Joe Shannon
 
 Local Variables:
 mode: indented-text
