@@ -105,8 +105,8 @@ public class jython {
     static final String usageBody =
             "Options and arguments:\n"
             // + "(and corresponding environment variables):\n"
-            + "-B       : don't write bytecode files on import\n"
-            // + "also PYTHONDONTWRITEBYTECODE=x\n" +
+            + "-B       : don't write bytecode files on import;\n"
+            + "           also PYTHONDONTWRITEBYTECODE=x\n"
             + "-c cmd   : program passed in as string (terminates option list)\n"
             // + "-d       : debug output from parser (also PYTHONDEBUG=x)\n"
             + "-Dprop=v : Set the property `prop' to value `v'\n"
@@ -723,6 +723,11 @@ public class jython {
         addDefault(registry, "python.startup", getenv("JYTHONSTARTUP"));
         // Go interactive after script. (PYTHONINSPECT because Python scripts may set it.)
         addDefault(registry, "python.inspect", getenv("PYTHONINSPECT"));
+
+        // PYTHONDONTWRITEBYTECODE
+        if (getenv("PYTHONDONTWRITEBYTECODE") != null) {
+            Options.dont_write_bytecode = true;
+        }
 
         // Read environment variable PYTHONIOENCODING into properties (registry)
         String pythonIoEncoding = getenv("PYTHONIOENCODING");
